force-app/main/default/objects/ucinn_ascendv2__Assignment__c/ucinn_ascendv2__Assignment__c.object-meta.xml
<CustomObject>
    <description>An internal user who is assigned to a constituent and is responsible for the solicitation of the constituent and the donations made by the constituent.</description>
    <label>Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>