force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <label>Assignment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DOD Request</fullName>
                <default>true</default>
                <label>DOD Request</label>
            </value>
            <value>
                <fullName>PD Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>