force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Assignment</relationshipLabel>
    <relationshipName>Assignment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>