force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/End_Date_Notes__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Notes__c</fullName>
    <label>End Date Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>