force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ISUF_Newly_Qualified__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Newly_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Qualification</label>
    <type>Checkbox</type>
</CustomField>