force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ISUF_Sales_Engagement_Cadence_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Sales_Engagement_Cadence_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Engagement Cadence Indicator</label>
    <type>Checkbox</type>
</CustomField>