force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/Qualify_Disqualify_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Disqualify_Date__c</fullName>
    <label>Q/DQ Date</label>
    <type>Date</type>
</CustomField>