force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/Related_Managed_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Related_Managed_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Managed Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignment (Connected Managed Constituent)</relationshipLabel>
    <relationshipName>Assignments_Related_Managed_Constituent</relationshipName>
    <type>Lookup</type>
</CustomField>