force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/Related_Managed_Organization__c.field-meta.xml
<CustomField>
    <fullName>Related_Managed_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Managed Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assignment (Connected Managed Organization)</relationshipLabel>
    <relationshipName>Assignments_Related_Managed_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>