force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Active_User_Indicator_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Active_User_Indicator_Formula__c</fullName>
    <description>Indicator used for reports to note if Assigned User is active</description>
    <formula>IF(ucinn_ascendv2__Assigned_Relationship_Manager_User__r.IsActive  = true, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <label>Active User Indicator</label>
    <type>Text</type>
</CustomField>