force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Relationship Mngr (Constituent)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments (Assigned Relationship Manager - Contact)</relationshipLabel>
    <relationshipName>Assignments_Assigned_RelShip_Mngr_Contac</relationshipName>
    <type>Lookup</type>
</CustomField>