force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Assigned_Relationship_Mngr_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assigned_Relationship_Mngr_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Assigned_Relationship_Manager_User__r.FirstName +&apos; &apos;+ ucinn_ascendv2__Assigned_Relationship_Manager_User__r.LastName</formula>
    <label>Assigned Relationship Mngr Name</label>
    <type>Text</type>
</CustomField>