force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assignment_End_Date__c</fullName>
    <label>Assignment End Date</label>
    <type>Date</type>
</CustomField>