force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Assignment_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assignment_Name_Auto_Number__c</fullName>
    <displayFormat>ASSIGN-{0000000}</displayFormat>
    <label>Assignment Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>