force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Qualification Manager</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Connected Manager</fullName>
            </value>
            <value>
                <fullName>Past Manager</fullName>
            </value>
            <value>
                <fullName>Stewardship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>