force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Contact_Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Last_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Constituent Last Name</label>
    <type>Text</type>
</CustomField>