force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Current_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Current_Unit_Formula__c</fullName>
    <formula>IF( ucinn_ascendv2__Assigned_Relationship_Manager_User__r.Department = $User.Department, $User.Department,(IF( ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__r.ucinn_ascendv2__Business_Unit__c = $User.Department, $User.Department, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Unit</label>
    <type>Text</type>
</CustomField>