force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Donor_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_ID_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Contact__c), ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c, ucinn_ascendv2__Contact__r.ucinn_ascendv2__Donor_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>