force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Is_Current_User_Assigned_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Current_User_Assigned_Formula__c</fullName>
    <formula>IF( ucinn_ascendv2__Assigned_Relationship_Manager_User__c = $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User Assigned</label>
    <type>Checkbox</type>
</CustomField>