force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Is_Primary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Primary_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the primary assignment of the household - portfolio reports can be run and this field could be used to count assignments</description>
    <label>Is Primary Assignment</label>
    <type>Checkbox</type>
</CustomField>