force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Mailing_Postal_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Mailing_Postal_Code_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Contact__c), ucinn_ascendv2__Account__r.ShippingPostalCode, ucinn_ascendv2__Contact__r.MailingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Postal Code</label>
    <type>Text</type>
</CustomField>