force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Mailing_State_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Mailing_State_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Contact__c), ucinn_ascendv2__Account__r.ShippingState, ucinn_ascendv2__Contact__r.MailingState)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing State</label>
    <type>Text</type>
</CustomField>