force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Manager_s_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manager_s_Unit_Formula__c</fullName>
    <formula>ucinn_ascendv2__Assigned_Relationship_Manager_User__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&apos;s Unit</label>
    <type>Text</type>
</CustomField>