force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Manager_Solicitor_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manager_Solicitor_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Assigned_Relationship_Manager_User__c),
HYPERLINK(&quot;/&quot; + ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__c,  ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__r.FirstName + &quot; &quot; + ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__r.LastName, &quot;_parent&quot;),
HYPERLINK(&quot;/&quot; + ucinn_ascendv2__Assigned_Relationship_Manager_User__c,  ucinn_ascendv2__Assigned_Relationship_Manager_User__r.FirstName + &quot; &quot; + ucinn_ascendv2__Assigned_Relationship_Manager_User__r.LastName, &quot;_parent&quot;))</formula>
    <label>Manager/Solicitor</label>
    <type>Text</type>
</CustomField>