force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__PRM_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__PRM_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Account__c), ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__r.FirstName + &quot; &quot; + ucinn_ascendv2__Contact__r.ucinn_ascendv2__PRM__r.LastName, ucinn_ascendv2__Account__r.ucinn_ascendv2__PRM__r.FirstName + &quot; &quot; + ucinn_ascendv2__Account__r.ucinn_ascendv2__PRM__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM</label>
    <type>Text</type>
</CustomField>