force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Solicitor_s_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Solicitor_s_Unit_Formula__c</fullName>
    <formula>ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__r.ucinn_ascendv2__Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitor&apos;s Unit</label>
    <type>Text</type>
</CustomField>