force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Spouse_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Spouse_Key_Formula__c</fullName>
    <formula>ucinn_ascendv2__Assigned_Relationship_Manager_User__r.Id + &quot;~&quot; + ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Spouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Key</label>
    <type>Text</type>
</CustomField>