force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Stage_of_Readiness_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness_Formula__c</fullName>
    <formula>IF(ISBLANK( ucinn_ascendv2__Account__c), TEXT(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Stage_of_Readiness__c), TEXT(ucinn_ascendv2__Account__r.ucinn_ascendv2__Stage_of_Readiness__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage of Readiness</label>
    <type>Text</type>
</CustomField>