force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Start_Date_Sort_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Start_Date_Sort_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Assignment_End_Date__c = null, DATE(1901, 1, 1),  ucinn_ascendv2__Assignment_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Sort</label>
    <type>Date</type>
</CustomField>