force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Sync_with_Spouse__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sync_with_Spouse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync with Spouse</label>
    <type>Checkbox</type>
</CustomField>