force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Update_PRN__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Update_PRN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is updated by a workflow rule, the current PRN in the contact record will be updated.</description>
    <label>Update PRN</label>
    <type>Checkbox</type>
</CustomField>