force-app/main/default/objects/ucinn_ascendv2__Assignment__c/fields/ucinn_ascendv2__Wealth_Rating_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Account__c), ucinn_ascendv2__Contact__r.ucinn_ascendv2__Wealth_Rating__c, ucinn_ascendv2__Account__r.ucinn_ascendv2__Wealth_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth Rating</label>
    <type>Text</type>
</CustomField>