force-app/main/default/objects/ucinn_ascendv2__Assignment__c/recordTypes/Case_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Case_Assignment</fullName>
    <active>true</active>
    <description>For management case requests</description>
    <label>Case Assignment</label>
</RecordType>