force-app/main/default/objects/ucinn_ascendv2__Assignment__c/recordTypes/ucinn_ascendv2__Account_Assignment.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Assignment</fullName>
    <active>true</active>
    <description>An assignment for a household or organization.</description>
    <label>Account Assignment</label>
</RecordType>