force-app/main/default/objects/ucinn_ascendv2__Assignment__c/recordTypes/ucinn_ascendv2__Contact_Assignment.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Assignment</fullName>
    <active>true</active>
    <description>An assignment for a constituent.</description>
    <label>Contact Assignment</label>
</RecordType>