force-app/main/default/objects/ucinn_ascendv2__Assignment__c/validationRules/Past_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_End_Date</fullName>
    <active>true</active>
    <description>Assignment End Date must be a date in the past</description>
    <errorConditionFormula>AND(
  ISPICKVAL(  ucinn_ascendv2__Assignment_Type__c , &quot;Primary Relationship Manager&quot; ),
  ucinn_ascendv2__Assignment_End_Date__c &gt;= TODAY()
)</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Assignment_End_Date__c</errorDisplayField>
    <errorMessage>The Assignment End Date must be in the Past</errorMessage>
</ValidationRule>