force-app/main/default/objects/ucinn_ascendv2__Assignment__c/validationRules/ucinn_ascendv2__Assignment_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Assignment_Type_Required</fullName>
    <active>true</active>
    <description>Assignment Type Required - used when inserting assignment records</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp; TEXT(ucinn_ascendv2__Assignment_Type__c) = null &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Assignment&quot;,
RecordType.DeveloperName = &quot;Contact_Assignment&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorMessage>Asssignment Type is required</errorMessage>
</ValidationRule>