force-app/main/default/objects/ucinn_ascendv2__Assignment__c/validationRules/ucinn_ascendv2__No_Future_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__No_Future_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ucinn_ascendv2__Assignment_End_Date__c &gt; TODAY() &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Account_Assignment&quot;,
RecordType.DeveloperName = &quot;Contact_Assignment&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Assignment_End_Date__c</errorDisplayField>
    <errorMessage>The Assignment End Date cannot be in the future</errorMessage>
</ValidationRule>