force-app/main/default/objects/ucinn_ascendv2__Assignment__c/listViews/Created_Last_week.listView-meta.xml
<ListView>
    <fullName>Created_Last_week</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Assignment_End_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Start_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Type__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Manager_Solicitor_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Created Last week</label>
</ListView>