force-app/main/default/objects/ucinn_ascendv2__Assignment__c/listViews/DQ_List_for_Kristi.listView-meta.xml
<ListView>
    <fullName>DQ_List_for_Kristi</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Assignment_End_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Start_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Type__c</columns>
    <columns>Qualified_Disqualified_Description__c</columns>
    <columns>Qualify_Disqualify_Date__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__Manager_Solicitor_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Qualified_Disqualified_Description__c</field>
        <operation>equals</operation>
        <value>Disqualified,PI Team DQ</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Assignment_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Assignment_End_Date__c</field>
        <operation>equals</operation>
        <value>12/31/2100</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Assignment__c.ucinn_ascendv2__Contact_Assignment</value>
    </filters>
    <label>DQ List for Kristi</label>
</ListView>