force-app/main/default/objects/ucinn_ascendv2__Assignment__c/listViews/My_view.listView-meta.xml
<ListView>
    <fullName>My_view</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Assigned_Relationship_Manager_User__c</columns>
    <columns>ucinn_ascendv2__Assignment_End_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Start_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ucinn_ascendv2__Assignment__c.ucinn_ascendv2__Contact_Assignment</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Assigned_Relationship_Manager_User__c</field>
        <operation>contains</operation>
        <value>arono</value>
    </filters>
    <label>Jodi&apos;s View</label>
</ListView>