force-app/main/default/objects/ucinn_ascendv2__Assignment__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Assignment_Type__c</columns>
    <columns>ucinn_ascendv2__Assigned_Relationship_Mngr_Contact__c</columns>
    <columns>ucinn_ascendv2__Assignment_Start_Date__c</columns>
    <columns>ucinn_ascendv2__Assignment_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Assignment_Type__c</field>
        <operation>equals</operation>
        <value>Primary Relationship Manager</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Assignment_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>