force-app/main/default/objects/ucinn_ascendv2__Assignment__c/listViews/ucinn_ascendv2__My_Unit_Current_Assignments.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__My_Unit_Current_Assignments</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Manager_s_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__Manager_Solicitor_Formula__c</columns>
    <columns>ucinn_ascendv2__Current_Unit_Formula__c</columns>
    <columns>ucinn_ascendv2__Donor_ID_Formula__c</columns>
    <columns>ucinn_ascendv2__Assignment_Type__c</columns>
    <columns>ucinn_ascendv2__PRM_Formula__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Contact_Last_Name_Formula__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Assignment_Start_Date__c</columns>
    <columns>ucinn_ascendv2__Stage_of_Readiness_Formula__c</columns>
    <columns>ucinn_ascendv2__Wealth_Rating_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Current_Unit_Formula__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Assignment_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>My Unit Current Assignments</label>
</ListView>